--- a/style.css
+++ b/style.css
@@ -1,160 +1,169 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 body {
-    height: 100vh;
+  height: 100vh;
 }
 
-.hide{
-    display:none;
+.hide {
+  display: none;
 }
 
 header {
-    height: 10%;
-    text-align: center;
+  height: 10%;
+  text-align: center;
 }
 
 header h1 {
-    background: royalblue;
-    height: 100%;
-    margin: 0 10px;
-    border-radius: 0 0 10px 10px ;
+  background: royalblue;
+  height: 100%;
+  margin: 0 10px;
+  border-radius: 0 0 10px 10px;
 }
 
 section {
-    height: 90%;
-    display: flex;
-    gap: 5%;
-    padding: 10px;
+  height: 90%;
+  display: flex;
+  gap: 5%;
+  padding: 10px;
 }
 
-section .songs,.playlist_box,
+section .songs,
+.playlist_box,
 .song_display {
-    height: 100%;
-    width: calc(100%/3);
-    background: royalblue;
-    border-radius: 10px;
+  height: 100%;
+  width: calc(100% / 3);
+  background: royalblue;
+  border-radius: 10px;
 }
 
 .songs {
-    padding: 10px;
-    overflow: hidden;
+  padding: 10px;
+  overflow: hidden;
 }
 
 .song_list {
-    margin: 0;
-    overflow-y: auto;
-    height: 90%;
+  margin: 0;
+  overflow-y: auto;
+  height: 90%;
 }
 
 .song_list .song {
-    background-color: aquamarine;
-    margin: 5px;
-    padding: 5px;
-    width: 60%;
-    border-radius: 5px;
-    hyphens: auto;
+  background-color: aquamarine;
+  margin: 5px;
+  padding: 5px;
+  width: 60%;
+  border-radius: 5px;
+  hyphens: auto;
 }
 
 .song_display {
-    display: flex;
-    flex-direction: column;
-    /* justify-content: center; */
-    /* align-items: center; */
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* align-items: center; */
 }
 
 .song_card {
-    margin: 5px;
-    height: 45%;
-    /* border: 1px solid; */
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: rgb(40, 87, 226);
-    box-shadow: 1px 1px 10px;
+  margin: 5px;
+  height: 45%;
+  /* border: 1px solid; */
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: rgb(40, 87, 226);
+  box-shadow: 1px 1px 10px;
 }
 
 .song_img {
-    width: 100%;
-    height: 70%;
-    background-color: black;
+  width: 100%;
+  height: 70%;
+  background-color: black;
 }
 
 .song_img img {
-    height: 100%;
-    width: 100%;
-    object-fit: contain;
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .song_title {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    padding: 5px;
-    font-size: 1.2rem;
-    font-weight: 700;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 5px;
+  font-size: 1.2rem;
+  font-weight: 700;
 }
-.song_artist{
-    padding: 5px;
-    font-weight: 500;
+.song_artist {
+  padding: 5px;
+  font-weight: 500;
 }
-.player{
-    width: 100%;
-    text-align: center;
-    margin-top: 10%;
-    /* border: 1px solid; */
+.player {
+  width: 100%;
+  text-align: center;
+  margin-top: 10%;
+  /* border: 1px solid; */
 }
-audio{
-    width: 75%;
-    height: 40px;
+audio {
+  width: 75%;
+  height: 40px;
 }
-.player_ctrl{
-    /* border: 1px solid; */
-    text-align: center;
-    margin-top: 10%;
+.player_ctrl {
+  /* border: 1px solid; */
+  text-align: center;
+  margin-top: 10%;
 }
-.player_ctrl button{
-    padding: 0px 20px;
-    font-size: 1.5rem;
-    font-weight: 600;
+.player_ctrl .addPlaylist {
+  font-size: 0.8rem;
+  text-align: center;
+  margin-top: 10px;
 }
-.playlist_box input, .playlist_box>button{
-    padding: 5px;
+.player_ctrl button {
+  padding: 0px 20px;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
-.playlist_box{
-    background-color: transparent;
+.playlist_box input,
+.playlist_box > button {
+  padding: 5px;
 }
-.playlist{
-    width: 100%;
-    background-color: royalblue;
-    height: 90%;
+.playlist_box {
+  background-color: transparent;
+}
+.playlist {
+  width: 100%;
+  background-color: royalblue;
+  height: 90%;
+  border: 1px solid;
+  margin-top: 5%;
+  border-radius: 10px;
+  overflow-y: auto;
+  padding: 5px;
+}
+.current_playlist button,
+.all_playlist button {
+  text-align: center;
+  background-color: aquamarine;
+  cursor: pointer;
+  width: 60%;
+  border-radius: 10px;
+  padding: 5px;
+  margin: 5px;
+}
+@media (max-width: 600px) {
+  header,
+  section {
+    display: none;
+  }
+  .hide {
     border: 1px solid;
-    margin-top: 5%;
-    border-radius: 10px;
-    overflow-y: auto;
-    padding: 5px;
-}
-.current_playlist button, .all_playlist button{
-    text-align: center;
-    background-color: aquamarine;
-    cursor: pointer;
-    width: 60%;
-    border-radius: 10px;
-    padding: 5px;
-    margin: 5px;
-}
-@media (max-width:600px) {
-    
-    header,section{
-        display: none;
-    }
-    .hide{
-        border: 1px solid;
-        display:block;
-        width: 50%;
-        position: absolute;
-    }
+    display: block;
+    width: 50%;
+    position: absolute;
+  }
 }
